docroot/themes/custom/transac/alshaya_victoria_secret/sass/components/header/_header-three-level.scss
.has--three-levels {
  .menu--three__list-item > .menu-two__link-wrapper a {
    @include breakpoint($desktop) {
      font-size: 0.875rem !important;
      text-transform: none;
    }
  }

  .menu--two__list {
    .menu__links__wrapper {
      @include breakpoint($desktop) {
        column-width: 13.2rem;
        padding-#{$left}: 5.75rem;
        padding-bottom: 2.5rem;
        height: 18rem;
        min-height: 0;
      }
    }
  }
}

.menu--two__list {
  .menu--two__list-item {
    .menu-two__link {
      @include breakpoint($desktop) {
        font-size: 0.75rem;
      }
    }

    & > .menu__link-wrapper.menu-two__link-wrapper {
      @include breakpoint($desktop) {
        margin-bottom: 0.3125rem !important;
      }
    }

    & > .menu-two__link-wrapper {
      &:hover::after,
      &::after {
        content: none;
      }
    }

    .menu--three__list {
      li a:hover {
        text-decoration: none;
      }
    }
  }

  .highlights {
    background: $mm_highlight_bg;
    margin-#{$right}: 0;
    padding: 2.5rem;
    padding-bottom: 0;
    height: 18.4rem;
    margin-top: -2.55rem;
  }
}

.highlights {
  img {
    @include breakpoint($desktop) {
      display: block;
    }
  }

  .highlighted {
    @include breakpoint($desktop) {
      margin-#{$right}: 1.5rem;
    }

    &:last-child {
      @include breakpoint($desktop) {
        margin-#{$right}: 0;
      }
    }
  }
}

.block-alshaya-main-menu {
  li.menu--one__list-item {
    &:hover > ul.menu--two__list {
      @include breakpoint($desktop) {
        padding-top: 1.5rem;
        height: 20.5rem !important;
        min-height: 0;
      }
    }

    & > ul.menu--two__list {
      @include breakpoint($desktop) {
        &::before {
          content: " ";
          display: block;
          height: 1px;
          background: $mm_top_border;
          position: relative;
          top: -2.5rem;
        }
      }
    }
  }
}

.first--child_open {
  & > .menu-two__link-wrapper::after {
    content: none;
  }
}

